# CppCommon

.github/workflows/: create-linux.yml  create-macos.yml  create-msys2.yml  create-windows.yml  test-linux.yml  test-macos.yml  test-msys2.yml  test-windows.yml
conan/: CMakeLists.txt  build.bat  conandata.yml  conanfile.py
conan/benchmarks/: CMakeLists.txt  build.bat  conanfile.py
conan/examples/: CMakeLists.txt  build.bat  conanfile.py  test.bat
conan/examples/test_package/: conanfile.py
conan/patches/: 00001-update-cmakelists.patch  00002-add-set-platform-features-module.patch  00003-add-set-compiler-features-module.patch
